Closed Bug 235336 Opened 22 years ago Closed 20 years ago

password manager doesn't prefill mailman admin passwords

Categories

(Toolkit :: Password Manager, defect, P3)

x86
Linux
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: myk, Assigned: bryner)

References

()

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

mozilla.org's mailman list admin login page looks like this: <FORM METHOD=POST ACTION="/admin/list-name"> <INPUT TYPE=password NAME=adminpw SIZE=30> <INPUT TYPE=SUBMIT name="request_login" value="Let me in..."> </FORM> When I first submit this form, password manager asks me if I want to save the logon. If I say yes, it creates an entry like the following in my signons.txt file but doesn't prefill the password the next time I go to the page: . http://mail.mozilla.org MDIEEPgAAAAAAAAAAAAAAAAAAAEwFAYIKoZIhvcNAwcECBzU5SysyuplBAgpYIw19SDRIw== *adminpw MDIEEPgAAAAAAAAAAAAAAAAAAAEwFAYIKoZIhvcNAwcECKwzGi2sDhKYBAjXTkpVAmo5Dg== .
I can't remember exactly what I did, I think I only had to add a (hidden) name field, but my modified version of the mozdev admin page worked. I asked the mozdev guys to modify the admin page, but they never did. I am sure that someone can find my modified version in the mailinglist archives. Hmm, maybe this was done per e-mail. I can do a search for the modified copy of the admin page, if someone needs it.
this happens on a LOT of sites; stored passwords basically don't work for me anymore... :(
Flags: blocking1.0?
+ing to get on bryner's radar
Flags: blocking1.0? → blocking1.0+
Not a "blocker"
Flags: blocking-aviary1.0+ → blocking-aviary1.0-
Attached patch possible fixSplinter Review
This patch fixes the problem with mailman login page for me. The problem is that while searching the page for user/pwd fields, the password manager first searches for the username field, and doesn't search for the pwd field if there's no username field.
Attachment #185577 - Flags: review?(bryner)
I believe this is a duplicate of bug 210771. Someone please merge them.
(In reply to comment #6) > I believe this is a duplicate of bug 210771. Someone please merge them. Yes, it's a duplicate. Since this bug has a patch and the other one not, let's resolve bug 210771 as dup of this one.
Isn't the other one a suite-specif bug, while this one is firefox only?
(In reply to comment #8) > Isn't the other one a suite-specif bug, while this one is firefox only? You're right. Not a duplicate then.
Comment #2 of bug 210771 reads "I also see this with Firefox 1.0, so this is not specific to Mozilla App Suite." Are these 2 products now so separated that common bugs will have 2 entries in bugzilla? That stinks.
I think this bug is a duplicate of https://bugzilla.mozilla.org/show_bug.cgi?id=119731 (but this report is more informative, so it might be better to mark 119731 a duplicate of this one). We have been running this patch in Ubuntu Breezy (it was first applied to our firefox in July 2005) without trouble and it now forms party of the actual release. I am about to transfer this patch to Dapper (our next release, targetted for April 2006) and also to bring the patch to the attention of the Debian firefox maintainers. It would be nice if this change could be reviewed by an expert at some point to know whether we are making a mistake :-). Ideally of course we would like it in 1.5 but I'm sure there are other considerations about including patches like this one at this stage.
Comment on attachment 185577 [details] [diff] [review] possible fix yep, looks ok.
Attachment #185577 - Flags: review?(bryner) → review+
Comment on attachment 185577 [details] [diff] [review] possible fix checked in on trunk. mconnor, you think this looks ok to take on the ff2 branch?
Attachment #185577 - Flags: approval-branch-1.8.1?(mconnor)
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Comment on attachment 185577 [details] [diff] [review] possible fix Yeah, looks good.
Attachment #185577 - Flags: approval-branch-1.8.1?(mconnor) → approval-branch-1.8.1+
Whiteboard: [checkin needed (1.8 branch)]
Keywords: fixed1.8.1
Whiteboard: [checkin needed (1.8 branch)]
*** Bug 290820 has been marked as a duplicate of this bug. ***
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: