Allow password manager to prefill a saved password even if there was no username field (bug 235336). Patch by chpe@gnome.org, r=me.